# TradeParser

./: CMakeLists.txt  README.md  TradeParser.code-workspace
benchmark/: CMakeLists.txt  parser_benchmark.cpp
cmake/: version_hpp.in
data/: input.csv
doc/doxygen/: CMakeLists.txt
include/: Accumulators.hpp  CsvReader.hpp  CsvWriter.hpp  Error.hpp  LexicalCast.hpp  Statistics.hpp  TradeStore.hpp  Utilities.hpp  version.hpp
src/: Main.cpp
test/: CMakeLists.txt  StatisticsTest.cpp  TestProgram.hpp  testProgram.py
